# keyple-plugin-stub-cpp-lib

./: .cppcheck.suppress  CMakeLists.txt  NOTICE.md  PUBLISHERS.yml  README.md  _config.yml  index.md  list_versions.md
.github/workflows/: build-and-test.yml
2.0.0/: _keyple_plugin_stub_export_8h.html  _keyple_plugin_stub_export_8h_source.html  _stub_plugin_8h.html  _stub_plugin_8h__dep__incl.md5  _stub_plugin_8h__incl.map  _stub_plugin_8h__incl.md5  _stub_plugin_8h_source.html  _stub_plugin_adapter_8cpp.html  _stub_plugin_adapter_8cpp__incl.map  _stub_plugin_adapter_8cpp__incl.md5  _stub_plugin_adapter_8cpp_source.html  _stub_plugin_adapter_8h.html  _stub_plugin_adapter_8h__incl.map  _stub_plugin_adapter_8h__incl.md5  _stub_plugin_adapter_8h_source.html  _stub_plugin_factory_8h.html  _stub_plugin_factory_8h__dep__incl.map  _stub_plugin_factory_8h__incl.map  _stub_plugin_factory_8h__incl.md5  _stub_plugin_factory_8h_source.html  _stub_plugin_factory_adapter_8cpp.html  _stub_plugin_factory_adapter_8cpp__incl.map  _stub_plugin_factory_adapter_8cpp__incl.md5  _stub_plugin_factory_adapter_8cpp_source.html  _stub_plugin_factory_adapter_8h.html  _stub_plugin_factory_adapter_8h__incl.map  _stub_plugin_factory_adapter_8h__incl.md5  _stub_plugin_factory_adapter_8h_source.html  _stub_plugin_factory_builder_8cpp.html  _stub_plugin_factory_builder_8cpp__incl.map  _stub_plugin_factory_builder_8cpp__incl.md5  _stub_plugin_factory_builder_8cpp_source.html  _stub_plugin_factory_builder_8h.html  _stub_plugin_factory_builder_8h__incl.map  _stub_plugin_factory_builder_8h__incl.md5  _stub_plugin_factory_builder_8h_source.html  _stub_pool_plugin_8h.html  _stub_pool_plugin_8h__dep__incl.map  _stub_pool_plugin_8h__incl.md5  _stub_pool_plugin_8h_source.html  (+132 more)
2.0.0/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_8.js  all_a.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_1.js  functions_2.js  namespaces_0.js  related_2.js  searchdata.js  (+1 more)
2.1.1-SNAPSHOT/: _apdu_response_provider_spi_8h.html  _apdu_response_provider_spi_8h__dep__incl.map  _apdu_response_provider_spi_8h__incl.map  _apdu_response_provider_spi_8h_source.html  _keyple_plugin_stub_export_8h.html  _keyple_plugin_stub_export_8h__dep__incl.map  _keyple_plugin_stub_export_8h_source.html  _stub_plugin_8h.html  _stub_plugin_8h__incl.map  _stub_plugin_8h__incl.md5  _stub_plugin_8h_source.html  _stub_plugin_adapter_8cpp.html  _stub_plugin_adapter_8cpp__incl.map  _stub_plugin_adapter_8cpp__incl.md5  _stub_plugin_adapter_8cpp_source.html  _stub_plugin_adapter_8h.html  _stub_plugin_adapter_8h__incl.map  _stub_plugin_adapter_8h_source.html  _stub_plugin_factory_8h.html  _stub_plugin_factory_8h_source.html  _stub_plugin_factory_adapter_8cpp.html  _stub_plugin_factory_adapter_8cpp_source.html  _stub_plugin_factory_adapter_8h.html  _stub_plugin_factory_adapter_8h__incl.map  _stub_plugin_factory_adapter_8h__incl.md5  _stub_plugin_factory_adapter_8h_source.html  _stub_plugin_factory_builder_8cpp.html  _stub_plugin_factory_builder_8cpp__incl.md5  _stub_plugin_factory_builder_8cpp_source.html  _stub_plugin_factory_builder_8h.html  _stub_plugin_factory_builder_8h__dep__incl.map  _stub_plugin_factory_builder_8h__dep__incl.md5  _stub_plugin_factory_builder_8h__incl.map  _stub_plugin_factory_builder_8h__incl.md5  _stub_plugin_factory_builder_8h_source.html  _stub_pool_plugin_8h.html  _stub_pool_plugin_8h_source.html  _stub_pool_plugin_adapter_8cpp.html  _stub_pool_plugin_adapter_8cpp__incl.map  _stub_pool_plugin_adapter_8cpp_source.html  (+121 more)
2.1.2-SNAPSHOT/: _apdu_response_provider_spi_8h.html  _apdu_response_provider_spi_8h__dep__incl.md5  _apdu_response_provider_spi_8h__incl.md5  _apdu_response_provider_spi_8h_source.html  _keyple_plugin_stub_export_8h.html  _keyple_plugin_stub_export_8h__dep__incl.md5  _keyple_plugin_stub_export_8h_source.html  _stub_plugin_8h.html  _stub_plugin_8h__dep__incl.map  _stub_plugin_8h_source.html  _stub_plugin_adapter_8cpp.html  _stub_plugin_adapter_8cpp_source.html  _stub_plugin_adapter_8h.html  _stub_plugin_adapter_8h__dep__incl.map  _stub_plugin_adapter_8h__dep__incl.md5  _stub_plugin_adapter_8h__incl.md5  _stub_plugin_adapter_8h_source.html  _stub_plugin_factory_8h.html  _stub_plugin_factory_8h__dep__incl.md5  _stub_plugin_factory_8h_source.html  _stub_plugin_factory_adapter_8cpp.html  _stub_plugin_factory_adapter_8cpp__incl.map  _stub_plugin_factory_adapter_8cpp__incl.md5  _stub_plugin_factory_adapter_8cpp_source.html  _stub_plugin_factory_adapter_8h.html  _stub_plugin_factory_adapter_8h__dep__incl.map  _stub_plugin_factory_adapter_8h__dep__incl.md5  _stub_plugin_factory_adapter_8h_source.html  _stub_plugin_factory_builder_8cpp.html  _stub_plugin_factory_builder_8cpp__incl.map  _stub_plugin_factory_builder_8cpp_source.html  _stub_plugin_factory_builder_8h.html  _stub_plugin_factory_builder_8h_source.html  _stub_pool_plugin_8h.html  _stub_pool_plugin_8h__dep__incl.md5  _stub_pool_plugin_8h__incl.map  _stub_pool_plugin_8h_source.html  _stub_pool_plugin_adapter_8cpp.html  _stub_pool_plugin_adapter_8cpp__incl.md5  _stub_pool_plugin_adapter_8cpp_source.html  (+153 more)
src/main/: CMakeLists.txt  CMakeLists.txt.keyple-common  CMakeLists.txt.keyple-plugin  CMakeLists.txt.keypop-reader  KeyplePluginStubExport.h  StubPlugin.h  StubPluginAdapter.cpp  StubPluginAdapter.h  StubPluginFactory.h  StubPluginFactoryAdapter.cpp  StubPluginFactoryAdapter.h  StubPluginFactoryBuilder.cpp  StubPluginFactoryBuilder.h  StubPoolPlugin.h  StubPoolPluginAdapter.cpp  StubPoolPluginAdapter.h  StubPoolPluginFactory.h  StubPoolPluginFactoryAdapter.cpp  StubPoolPluginFactoryAdapter.h  StubPoolPluginFactoryBuilder.cpp  StubPoolPluginFactoryBuilder.h  StubReader.h  StubReaderAdapter.cpp  StubReaderAdapter.h  StubSmartCard.cpp  StubSmartCard.h
src/main/spi/: ApduResponseProviderSpi.h
src/test/: CMakeLists.txt  CMakeLists.txt.googletest  StubPluginAdapterTest.cpp  StubPluginFactoryAdapterTest.cpp  StubPoolPluginAdapterTest.cpp  StubPoolPluginFactoryAdapterTest.cpp  StubReaderAdapterTest.cpp  StubSmartCardTest.cpp
(+45 files in other folders)
